# bruhanimate

./: .buildinfo  .gitignore  COPYING  COPYING.txt  LICENSE  README.md  bruhanimate.bruheffect.html  bruhanimate.bruhrenderer.html  bruhanimate.bruhutil.html  bruhanimate.demos.html  bruhanimate.html  bruhanimate.py  bruheffects.py  bruhffer.py  bruhrenderer.py  bruhscreen.py  deez.py  demo.py  effects_demo.py  genindex.html  gitSync.bat  images.py  index.html  life.py  line_demo.py  modules.html  objects.inv  plasma.txt  publish.bat  publish.ps1  publish.py  push_version.py  py-modindex.html  pyproject.toml  renderers_demo.py  requirements-windows.txt  requirements.txt  search.html  searchindex.js  setup.py  (+5 more)
.claude/: settings.local.json
.github/workflows/: documentation.yml  release.yml  test.yml
_modules/: index.html
_sources/: index.rst.txt  modules.rst.txt
bruhanimate/: __init__.py  bruheffects.py  bruhffer.py  bruhrenderer.py  bruhscreen.py  demo.py  demo2.py  holiday.py  images.py  line_demo.py  testing.py
bruhanimate/bruheffect/: __init__.py  audio_effect.py  automaton_effect.py  base_effect.py  boids_effect.py  chatbot_effect.py  diffusion_effect.py  draw_lines_effect.py  fire_effect.py  firework_effect.py  game_of_life_effect.py  julia_effect.py  matrix_effect.py  noise_effect.py  offset_effect.py  perlin_effect.py  plasma_effect.py  rain_effect.py  registry.py  sand_effect.py  settings.py  snow_effect.py  star_effect.py  static_effect.py  twinkle_effect.py  voronoi_effect.py  water_effect.py
bruhanimate/bruhrenderer/: __init__.py  background_color_renderer.py  base_renderer.py  center_renderer.py  effect_renderer.py  focus_renderer.py  pan_renderer.py  terminal_renderer.py
bruhanimate/bruhutil/: __init__.py  bruherrors.py  bruhffer.py  bruhimage.py  bruhscreen.py  bruhtypes.py  utils.py
bruhanimate/demos/: audio_demo.py  automaton_demo.py  boids_demo.py  chatbot_demo.py  diffusion_demo.py  fire_demo.py  firework_demo.py  gol_demo.py  holiday.py  julia_demo.py  line_demo.py  matrix_demo.py  (+12 more)
docs/: autocreate.py
testing/: wrap.py
tests/: test_base_effect.py  test_base_renderer.py  test_bruhimage.py  test_buffer.py  test_center_renderer.py  test_registry.py  test_static_effect.py  test_utils.py
(+111 files in other folders)
