[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bruhanimate"
version = "0.2.95"
description = "ASCII Termnial Animation Package"
authors = [ "ethanlchristensen <ethanlchristensen@outlook.com>",]
license = "Apache License"
readme = "README.md"
homepage = "https://github.com/ethanlchristensen/bruhanimate"
repository = "https://github.com/ethanlchristensen/bruhanimate"
keywords = [ "python", "terminal", "terminal-animation", "bruhanimate",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Programming Language :: Python :: 3", "Operating System :: Unix", "Operating System :: Microsoft :: Windows",]

[tool.poetry.dependencies]
python = "^3.13"
future = "^1.0.0"
bruhcolor = "^0.0.64"
pyfiglet = "^1.0.4"
numpy = "^2.3.4"
openai = "^2.6.1"
requests = "^2.32.5"

[tool.poetry.dependencies.pywin32]
version = "^311"
markers = "sys_platform == 'win32'"

[tool.poetry.dependencies.pyaudio]
version = "^0.2.14"
markers = "sys_platform == 'win32'"

[tool.poetry.group.docs.dependencies]
sphinx = "8.1.3"
furo = "2024.8.6"